# template_service

./: .env.template  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: auto-bump-and-release.yml  ci.yml  publish-release.yml
app/config/: settings.py
app/utils/: logger.py
scripts/: dev-compose.sh  prod-compose.sh  test-compose.sh
