[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = ""
dynamic = ["version"]
description = "n"
authors = [
    {name = "", email = ""}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "minio==7.2.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
markers = [
]

[tool.setuptools]
# Ensure only the Python package under `app/` is included; exclude non-Python assets

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["assets*"]

[tool.setuptools.dynamic]
version = {file = "app/VERSION"}
